Changed check for blank string and added minor improvements