@@ -18,6 +18,7 @@ package org.thingsboard.server.dao.util;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.thingsboard.common.util.JacksonUtil;
+import org.thingsboard.server.common.data.StringUtils;
 import org.thingsboard.server.common.data.device.credentials.BasicMqttCredentials;
 import org.thingsboard.server.common.data.security.DeviceCredentials;
 import org.thingsboard.server.dao.device.DeviceConnectivityInfo;
@@ -63,7 +64,7 @@ public class DeviceConnectivityUtil {
         if (MQTTS.equals(protocol)) {
             command.append(" --cafile ").append(CA_ROOT_CERT_PEM);
         }
-        command.append(" -h ").append(host).append(port.isBlank() ? "" : " -p " + port);
+        command.append(" -h ").append(host).append(StringUtils.isBlank(port) ? "" : " -p " + port);
         command.append(" -t ").append(deviceTelemetryTopic);
 
         switch (deviceCredentials.getCredentialsType()) {
@@ -219,7 +220,7 @@ public class DeviceConnectivityUtil {
     }
 
     public static String getHost(String baseUrl, DeviceConnectivityInfo properties, String protocol) throws URISyntaxException {
-        String initialHost = properties.getHost() == null || properties.getHost().isBlank() ? baseUrl : properties.getHost();
+        String initialHost = StringUtils.isBlank(properties.getHost()) ? baseUrl : properties.getHost();
         InetAddress inetAddress;
         String host = null;
         if (VALID_URL_PATTERN.matcher(initialHost).matches()) {
@@ -244,7 +245,7 @@ public class DeviceConnectivityUtil {
     }
 
     public static String getPort(DeviceConnectivityInfo properties) {
-        return properties.getPort() == null || properties.getPort().isBlank() ? "" : properties.getPort();
+        return StringUtils.isBlank(properties.getPort()) ? "" : properties.getPort();
     }
 
     public static boolean isLocalhost(String host) {
